--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/pmvrmc/node-globe#readme",
   "dependencies": {
-    "request": "^2.72.0"
+    "hapi": "^13.4.1",
+    "inert": "^4.0.0",
+    "request": "^2.72.0",
+    "swig": "^1.4.2",
+    "vision": "^4.1.0"
   }
 }
