Extract info from Google Docs and Meetup.com
@LynxEyes
@zcarlos

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "request": "^2.72.0",
     "swig": "^1.4.2",
     "vision": "^4.1.0",
+    "async": "^2.0.0-rc.5",
     "request": "^2.72.0",
     "tabletop": "^1.4.3"
   }
