--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   "homepage": "https://github.com/pmvrmc/node-globe#readme",
   "dependencies": {
+    "async": "^2.0.0-rc.5",
     "hapi": "^13.4.1",
     "inert": "^4.0.0",
+    "lodash": "^4.12.0",
     "request": "^2.72.0",
     "swig": "^1.4.2",
-    "vision": "^4.1.0",
-    "async": "^2.0.0-rc.5",
-    "request": "^2.72.0",
-    "tabletop": "^1.4.3"
+    "tabletop": "^1.4.3",
+    "vision": "^4.1.0"
   }
 }
